# BulletEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/models/: README.md
samples/allocation-test/: main.cpp
samples/basic-external/: PhysicsSystem.cpp  main.cpp
samples/basic-terminal/: CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  main.cpp
samples/benchmark-performance/: main.cpp  performance.py
samples/benchmark-performance/data/: 100.csv  1000.csv
samples/common/: Components.h
samples/common/objects/: Projectile.cpp  Projectile.h
samples/common/systems/: CollisionSystem.cpp  CollisionSystem.h  TrajectorySystem.cpp  TrajectorySystem.h
samples/comparison-configs/: PhysicsSystem.cpp  PhysicsSystem.h  main.cpp
samples/comparison-costs/: cost.py  main.cpp
samples/comparison-costs/data/: midpoint.csv
samples/comparison-integrators/: main.cpp  time.py  trajectory.py
samples/comparison-integrators/data/: time.csv
samples/config-comparison/: PhysicsSystem.cpp  PhysicsSystem.h  main.cpp
samples/convergence-test/: convergence.py  main.cpp
samples/convergence-test/data/: convergence.csv
samples/cost-comparison/: main.cpp
samples/cost-comparison/data/: euler.csv  midpoint.csv  rk4.csv
samples/drag-comparison/: PhysicsSystem.cpp  PhysicsSystem.h  main.cpp
samples/integrator-comparison/: data.csv  main.cpp  time.py  trajectory.py
samples/integrator-comparison/data/: time.csv  trajectory.csv
samples/performance-benchmark/: main.cpp
samples/performance-benchmark/data/: 1.csv  10.csv
samples/projectile-basic/: PhysicsSystem.cpp  PhysicsSystem.h  main.cpp
samples/terminal-ballistics/: CollisionSystem.cpp  CollisionSystem.h  Components.h  PhysicsSystem.cpp  PhysicsSystem.h  TrajectorySystem.cpp  TrajectorySystem.h  main.cpp
samples/test-allocations/: main.cpp
samples/test-convergence/: convergence.py  main.cpp
samples/test-convergence/data/: convergence.csv
src/ecs/: Components.h  Ecs.cpp  Ecs.h  components.h  ecs.cpp  ecs.h
src/ecs/systems/: BallisticSystem.cpp  BallisticSystem.h  CollisionSystem.cpp  CollisionSystem.h  ImGuiSystem.cpp  ImGuiSystem.h  InputSystem.cpp  InputSystem.h  PhysicSystem.cpp  PhysicSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  TrajectorySystem.cpp  TrajectorySystem.h
src/objects/: Projectile.cpp  Projectile.h
src/systems/: BallisticSystem.cpp  BallisticSystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  TrajectorySystem.cpp  TrajectorySystem.h  render_system.cpp  render_system.h
